testsuite/tests/typecheck/should_fail/mc21.stderr

mc21.hs:12:26: error:
    • Couldn't match type ‘a’ with ‘[a]’
      ‘a’ is a rigid type variable bound by
        a type expected by the context:
          forall a. [a] -> [[a]]
        at mc21.hs:(11,9)-(12,31)
      Expected type: [a] -> [[a]]
        Actual type: [[a]] -> [[a]]
    • In the expression: take 5
      In a stmt of a monad comprehension: then group using take 5
      In the expression:
        [GHC.List.length x | x <- [Gnorf, Brain], then group using take 5]
